--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vue": "^5.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.8.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "vue": "^3.5.14"
   }
 }
