--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/vue": "^5.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.8.0",
+    "pinia": "^3.0.2",
     "tailwindcss": "^4.1.7",
     "vue": "^3.5.14"
   }
